Scrollbar styled, overflow problem fixed

--- a/public/about.css
+++ b/public/about.css
@@ -1,5 +1,5 @@
 .about_container {
-  padding: 5vw;
+  padding: 5vw 5vw 0 5vw;
   width: 80vw;
   height: 85vh;
   background: linear-gradient(to bottom, rgba(224, 204, 255,0.4), rgba(0,0,0,0.6));
