--- a/public/app.css
+++ b/public/app.css
@@ -1,10 +1,12 @@
+
 .app_container {
-  padding: 5vw;
+  padding: 5vw 5vw 0 5vw;
   width: 80vw;
   height: 85vh;
   background: linear-gradient(to bottom, rgba(224, 204, 255,0.4), rgba(0,0,0,0.6));
   color: #fff;
   font-size: 20px;
+  overflow-y: scroll;
 }
 
 @media only screen and (max-width: 650px) {
