--- a/public/notFound.css
+++ b/public/notFound.css
@@ -1,10 +1,10 @@
 .nf_container {
-  background: linear-gradient(to bottom, rgba(68, 0, 102,0.4), rgba(0,0,0,0.6));
-  height: 55vh;
-  margin-top: 15vh;
-  color: rgba(255, 255, 255, 0.7);
-  box-sizing: border-box;
-  width: 55vw;
+  padding: 5vw;
+  width: 80vw;
+  height: 85vh;
+  background: linear-gradient(to bottom, rgba(224, 204, 255,0.4), rgba(0,0,0,0.6));
+  color: #fff;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,9 +13,24 @@
 .nf_header {
   color: rgba(255, 255, 255, 1);
   margin-top: 3rem;
+
 }
 
 .nf_content {
-  width: 50%;
-  margin-top: 5rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.nf_content  .signUpBtn{
+  text-decoration: none;
+  color: rgba(224, 204, 255,0.8);
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 650px) {
+  .nf_container {
+    width: 100vw;
+    overflow-y: scroll;
+  }
 }
