--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,15 @@ body {
   min-height: 100%;
 }
 
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+
 #app {
   height: 100vh;
 }
@@ -292,7 +301,7 @@ ul.nav-main li.logo .logo-by {
 .home-profile .todo-info {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;;
+  justify-content: space-around;
   margin-top: 5vh;
   width: 50vh;
 }
